<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etRadius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="15dp"
        android:hint="@string/hint_InputRadius"
        android:inputType="numberDecimal"
        android:maxLength="4"
        android:padding="10dp"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_Default"
            android:textColor="@color/colorGray"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textview_RadiusDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGray"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGray"
            android:text="m"
            android:textSize="12sp" />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/text_SetRadius"
        android:textColor="@color/colorGray"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnConfirmRadius"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@color/tbPlace"
            android:text="@string/text_Agree"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnCancelRadius"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@color/tbPlace"
            android:text="@string/text_Cancel"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>