<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:fitsSystemWindows="true">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/bgToolbar"
            app:layout_collapseMode="pin">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="23dp"
                android:layout_height="13dp"
                android:background="@null"
                android:tint="@color/colorWhite"
                android:layout_marginLeft="-50dp"
                android:src="@drawable/ic_arrow_left_36dp"/>

            <TextView
                android:id="@+id/toolbarTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_CreateTrip"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/etTripName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_grey_border_bottom"
            android:hint="@string/text_TripName"
            android:maxLength="50"
            android:padding="10dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etStartDatePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/white_grey_border_bottom"
            android:hint="@string/text_StartDate"
            android:inputType="date"
            android:maxLength="13"
            android:padding="10dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etEndDatePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/colorWhite"
            android:hint="@string/text_EndDate"
            android:inputType="date"
            android:maxLength="13"
            android:padding="10dp"
            android:textSize="16sp" />


    </LinearLayout>

    <Button
        android:id="@+id/btnCreateTripSchedule"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@color/tbPlace"
        android:text="@string/text_Create"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="18sp" />


</android.support.design.widget.CoordinatorLayout>
